feat(ACC-651): policy set activation resource
